Fixes wrong background color on button.link.

--- a/tool-ui/src/main/webapp/style/views.less
+++ b/tool-ui/src/main/webapp/style/views.less
@@ -630,6 +630,7 @@ figure,
     padding: 0;
 
     &:hover {
+        background: transparent;
         text-decoration: underline;
     }
 
